--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -2246,7 +2246,7 @@
                     <div class="video-info">
                         <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9604,7 +9604,7 @@
                         <div class="video-info">
                             <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10276,7 +10276,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
