--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The Mystical Serpent | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>HALLOWEEN CRINGE</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>The Mystical Serpent | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10309,7 +10309,7 @@
                         <div class="video-info">
                             <h3>HALLOWEEN CRINGE</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
