--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>I got chased at the end because they love me</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>That’s YOUR 🫵 fault</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Bro was on pause😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Why Nothing Truly Fulfills You</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>What Most Traders Around the World Are Doing Wrong</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Transcending death | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Unblocking Your Inner Light</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>The Mystical Serpent | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -376,7 +376,7 @@
                     <div class="video-info">
                         <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2631,7 +2631,7 @@
                     <div class="video-info">
                         <h3>I Waited 2-Hours to try Japan's Fluffiest Egg Sandwich</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 03, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>What Most Traders Around the World Are Doing Wrong</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Why Nothing Truly Fulfills You</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Transcending death | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Unblocking Your Inner Light</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7931,7 +7931,7 @@
                         <div class="video-info">
                             <h3>The Mystical Serpent | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Only Human Beings Hesitate... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>I got chased at the end because they love me</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>That’s YOUR 🫵 fault</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Bro was on pause😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10298,7 +10298,7 @@
                         <div class="video-info">
                             <h3>What Life on a Japanese Island With Only 11 People is like</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10826,7 +10826,7 @@
                         <div class="video-info">
                             <h3>I Waited 2-Hours to try Japan's Fluffiest Egg Sandwich</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 03, 2025</div>
                         </div>
                     </a>
                 </div>
