--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>I got chased at the end because they love me</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>That’s YOUR 🫵 fault</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>What Most Traders Around the World Are Doing Wrong</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Transcending death | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Unblocking Your Inner Light</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1630,7 +1630,7 @@
                     <div class="video-info">
                         <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>87% Win Rate Forex Strategy - Engulfing Bar Setup (No Indicators)</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Gold Scalping Strategy That Actually Works ⚡ (2-Hour Test Results)”</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>What Most Traders Around the World Are Doing Wrong</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6183,7 +6183,7 @@
                         <div class="video-info">
                             <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Transcending death | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Unblocking Your Inner Light</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>I got chased at the end because they love me</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>That’s YOUR 🫵 fault</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
