--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Mastery with Kriya | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Bro was on pause😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -4138,9 +4138,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=uLwoMvknVYs" target="_blank">
-                    <img src="https://i.ytimg.com/vi/uLwoMvknVYs/mqdefault.jpg" alt="How brands program you to buy their product">
+                    <img src="https://i.ytimg.com/vi/uLwoMvknVYs/mqdefault.jpg" alt="The psychology of how brands influence you">
                     <div class="video-info">
-                        <h3>How brands program you to buy their product</h3>
+                        <h3>The psychology of how brands influence you</h3>
                         <div class="channel">Matt D'Avella</div>
                         <div class="date">Jul 17, 2025</div>
                     </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Mastery with Kriya | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9022,9 +9022,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=uLwoMvknVYs" target="_blank">
-                        <img src="https://i.ytimg.com/vi/uLwoMvknVYs/mqdefault.jpg" alt="How brands program you to buy their product">
+                        <img src="https://i.ytimg.com/vi/uLwoMvknVYs/mqdefault.jpg" alt="The psychology of how brands influence you">
                         <div class="video-info">
-                            <h3>How brands program you to buy their product</h3>
+                            <h3>The psychology of how brands influence you</h3>
                             <div class="channel">Matt D'Avella</div>
                             <div class="date">Jul 17, 2025</div>
                         </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Bro was on pause😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
