--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Vikkstar Sidequests</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">59 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>"Everyone Starts Somewhere"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Handling Your Reactions to Reality</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -530,7 +530,7 @@
                     <div class="video-info">
                         <h3>Happy Halloween 🎃👻</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -629,7 +629,7 @@
                     <div class="video-info">
                         <h3>Special announcement</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -915,7 +915,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN FIND THE LINK</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1003,7 +1003,7 @@
                     <div class="video-info">
                         <h3>Seniors #1 Golf Swing Mistake - You're Leaving 50 Yards on the Table!</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1652,7 +1652,7 @@
                     <div class="video-info">
                         <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2257,7 +2257,7 @@
                     <div class="video-info">
                         <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5820,7 +5820,7 @@
                         <div class="video-info">
                             <h3>Special announcement</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Handling Your Reactions to Reality</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9439,7 +9439,7 @@
                         <div class="video-info">
                             <h3>Happy Halloween 🎃👻</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9461,7 +9461,7 @@
                         <div class="video-info">
                             <h3>Scooping the pizzas , pizza peel technique #pizzalover #pizza #streetfood #food</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10072,7 +10072,7 @@
                         <div class="video-info">
                             <h3>Seniors #1 Golf Swing Mistake - You're Leaving 50 Yards on the Table!</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -10083,7 +10083,7 @@
                         <div class="video-info">
                             <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10116,7 +10116,7 @@
                         <div class="video-info">
                             <h3>Setup Mistakes Even Experienced Golfers Make (and How to Fix Them)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Vikkstar Sidequests</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">59 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>"Everyone Starts Somewhere"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10452,7 +10452,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN FIND THE LINK</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
