--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Vikkstar Sidequests</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The New Downswing - You'll Never Worry About Your Hips Ever Again!</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>"Everyone Starts Somewhere"🥀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Handling Your Reactions to Reality</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -486,7 +486,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>Traders Love Entries — Pros Focus on Exits</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -629,7 +629,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Staying on the Path</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -717,7 +717,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Choosing a Life of Openness</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -981,7 +981,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1630,7 +1630,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Right Understanding</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>Traders Love Entries — Pros Focus on Exits</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7942,7 +7942,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Handling Your Reactions to Reality</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8063,7 +8063,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Setting Your Polestar on Real Inner Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8129,7 +8129,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Staying on the Path</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8151,7 +8151,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Choosing a Life of Openness</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8173,7 +8173,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Every Day Gets Lighter When You Let Go of Yourself</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8195,7 +8195,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Inner Sport of Letting Go</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -8349,7 +8349,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Right Understanding</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>The New Downswing - You'll Never Worry About Your Hips Ever Again!</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Vikkstar Sidequests</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10254,7 +10254,7 @@
                         <div class="video-info">
                             <h3>"Everyone Starts Somewhere"🥀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
